--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ after_success:
 # Monitor only these branches
 branches:
   only:
-  - master
+  - production
 
 # You can delete the cache using travis-ci web interface
 cache:
